--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -27,20 +27,20 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
   .devider-line
   .main-content
     .content-heading
-      span.blue-text Get mobilized!
+      span.blue-text =t'homepage.get_mobilized'
     .content-image
       img src="images/new_design/iphone.png"
-    .content-text Reach more people with a mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.
+    .content-text =t'homepage.reach_more'
     .content-list
-      strong.blue-text Features include
+      strong.blue-text =t'homepage.features_include'
       ul.content-ul
-        li Completely Free Mobile Sites
-        li Free Hosting & Mobile URL
-        li One-click calling
-        li Interactive maps
-        li Social media integration
-        li Easily customizable content
-        li Subscriber notification
+        li =t'homepage.feature1'
+        li =t'homepage.feature2'
+        li =t'homepage.feature3'
+        li =t'homepage.feature4'
+        li =t'homepage.feature5'
+        li =t'homepage.feature6'
+        li =t'homepage.feature7'
     .content-signup
       a.signup-btn.signup-btn-body href=new_user_registration_path =t'sign_up.sign_up'
 
