i18n: fixed bug where home page signin button wasn't submitting

--- a/app/views/shared/_header-signin-form_new.slim
+++ b/app/views/shared/_header-signin-form_new.slim
@@ -17,5 +17,5 @@
       br
       a.signin-whitetext  href="/users/password/new" =t'sign_in.forgot_password'
 
-    .pretty-button.signin-button
-      submit_tag =t'sign_in.sign_in'
+    input.pretty-button.signin-button type="submit" value=t'sign_in.sign_in'
+
