--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -36,11 +36,12 @@ h2.active-site {
     margin-bottom: 6px; }
 
 .sites img.site-pic, .admins img.site-pic {
+  max-width: 50px;
   vertical-align: middle; }
 .sites td.site-pic, .admins td.site-pic {
   float: left;
   padding-right: 10px;
-  width: 100px;
+  width: 50px;
   text-align: right; }
 .sites div.site-url, .admins div.site-url {
   font-weight: bold; }
@@ -57,6 +58,7 @@ h2.active-site {
     margin-bottom: 6px;
     width: 500px; }
     .site-details-wrap ul.admins img {
+      max-width: 50px;
       vertical-align: middle; }
 
 form#account-setup-box.dialog .loading {
