Fixed ie7 form button bug. Closes #229

--- a/app/views/signup/default/step-4.slim
+++ b/app/views/signup/default/step-4.slim
@@ -22,7 +22,7 @@
     br
 
   .action-bar
-    .rfloat.main-btn
-      a href=builder_main_path
+    form action=builder_main_path method="GET"
+      .rfloat.main-btn
         input.content type="submit" value=t'account_setup.button.goto_builder'
     .clearfix
