--- a/app/views/mobile/aritcaptcha.slim
+++ b/app/views/mobile/aritcaptcha.slim
@@ -1,3 +1,3 @@
 hr
-label Please solve this security question:
+label =t'mobile.form.security'
 = raw aritcaptcha_tag :format => "image", :operations => [:add, :sub], :max => 10
