i18n: Fixed _templates.slim

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -354,7 +354,7 @@ script.jeditor-youtube-dialog(type="text/template")
         img.help-bubble src="/images/ui/help-bubble.png" title=t('builder.jeditor.help.youtube')
       input type="text" name="url" value=""
     p.error.hide
-      | =t'dialog.add_video.invalid_url'
+      =t'dialog.add_video.invalid_url'
 
 #dialog-invalid-drag title=t'dialog.widget_add_error.title'
   p
