--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -3,6 +3,7 @@
 // global variables
 window.g = {
   i18n: <%=raw (t("javascript").merge :wnames => t("widgets.names")).to_json %>,
+  i18n_locale: "<%= I18n.locale.to_s %>",
   width: 320,
   height: 480,
   topBarMaxHeight: 127,
