--- a/public/stylesheets/sass/constants.scss
+++ b/public/stylesheets/sass/constants.scss
@@ -36,7 +36,7 @@ $font-size-landing-bar: 14px;
 $font-size-p: 110%;
 $font-size-select: 12px;
 $font-size-signup-bar: 14px;
-$font-size-title: 110%;
+$font-size-title: 12px;
 $font-size-textarea: 100%;
 $font-size-tooltip: 100%;
 $font-size-ul: 100%;
