--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,14 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%=t('change_password.email.greeting', :email => @resource.email)%></p>
 
-<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+<p><%=t('change_password.email.password_change_request_msg')%></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to t('change_password.email.change_password'), edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%=t('change_password.email.no_user_request')%></p>
+<p>
+<%==t'change_password.email.closing'%>
+<br />
+<%==t'change_password.email.signature'%>
+<br />
+<%==t'change_password.email.contact'%>
+</p>
