--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="center-box">
-  <h2>Resend confirmation instructions</h2>
+  <h2><%=t'resend_confirmation.title'%></h2>
 
   <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
     <%= devise_error_messages! %>
@@ -7,7 +7,8 @@
     <p><%= f.label :email %><br />
     <%= f.text_field :email %></p>
 
-    <p><%= f.submit "Resend confirmation instructions" %></p>
+    <p><%= f.submit t('resend_confirmation.resend_confirmation') %></p>
+    <br />
   <% end %>
 
   <%= render :partial => "devise/shared/links" %>
