--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="center-box">
-  <h2>Change your password</h2>
+  <h2><%=t'change_password.title'%></h2>
 
   <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
     <%= devise_error_messages! %>
@@ -11,7 +11,7 @@
     <p><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %></p>
 
-    <p><%= f.submit "Change my password" %></p>
+    <p><%= f.submit t('change_password.change_password') %></p>
   <% end %>
 
   <%= render :partial => "devise/shared/links" %>
