--- a/app/views/user_mailer/booking_email.html.erb
+++ b/app/views/user_mailer/booking_email.html.erb
@@ -14,7 +14,6 @@ Date: <%= @params[:date] %>
 <br />
 <br />
 
-Thank You,
+<%==t'mobile.email.thank_you'%>
 <br />
-<a href="http://www.yomobi.com">YoMobi</a>
-<br />
+<%==t'mobile.email.signature'%>
