--- a/app/views/user_mailer/leave_msg.html.erb
+++ b/app/views/user_mailer/leave_msg.html.erb
@@ -1,8 +1,8 @@
-A visitor to <a href="<%= @params[:company_mobile_url] %>">your YoMobi site</a> has sent you a message:
+<%==t'leave_a_message.email.body', :site_url => @params[:company_mobile_url]) %>
 <br />
 <br />
 
-Name: <%= @params[:customer_name] %>
+<%= t'mobile.email.name' @params[:customer_name] %>
 <br />
 Email: <%= @params[:customer_email] %>
 <br />
@@ -13,8 +13,7 @@ Subject: <%= @params[:customer_subject] %>
 Message: <%= @params[:customer_feedback] %>
 <br />
 <br />
-
-Thank You,
+<%==t'mobile.email.thank_you'%>
 <br />
-<a href="http://www.yomobi.com">YoMobi</a>
+<%==t'mobile.email.signature'%>
 <br />
