i18n: booking_email.html.erb, en.yml

--- a/app/views/user_mailer/booking_email.html.erb
+++ b/app/views/user_mailer/booking_email.html.erb
@@ -1,4 +1,4 @@
-A visitor to <a href="<%= @params[:company_mobile_url] %>">your YoMobi site</a> has sent you a booking request:
+<%==t'booking_request.email.body', :site_url => @params[:company_mobile_url]) %>
 <br />
 <br />
 
