i18n: Form email formatting

--- a/app/views/user_mailer/booking_email.html.erb
+++ b/app/views/user_mailer/booking_email.html.erb
@@ -1,4 +1,4 @@
-<%==t'booking_request.email.body', :site_url => @params[:company_mobile_url]) %>
+<%==t('booking_request.email.body', :site_url => @params[:company_mobile_url]) %>
 <br />
 <br />
 
