--- a/app/views/user_mailer/leave_msg.html.erb
+++ b/app/views/user_mailer/leave_msg.html.erb
@@ -1,4 +1,4 @@
-<%==t'leave_a_message.email.body', :site_url => @params[:company_mobile_url]) %>
+<%==t('leave_a_message.email.body', :site_url => @params[:company_mobile_url]) %>
 <br />
 <br />
 
