--- a/app/views/user_mailer/call_back.html.erb
+++ b/app/views/user_mailer/call_back.html.erb
@@ -1,4 +1,4 @@
-<%==t'call_back.email.body', :site_url => @params[:company_mobile_url]) %>
+<%==t('call_back.email.body', :site_url => @params[:company_mobile_url]) %>
 <br />
 <br />
 
