--- a/app/views/user_mailer/tell_friend.html.erb
+++ b/app/views/user_mailer/tell_friend.html.erb
@@ -1,4 +1,4 @@
-<%=t'tell_a_friend.email.body', :friend_name => @params[:name_from] %> 
+<%==t('tell_a_friend.email.body', :friend_name => @params[:name_from]) %> 
 <a href="<%= @params[:company_mobile_url] %>"><%= @params[:company_mobile_url] %></a>
 <br />
 <br />
