--- a/app/views/user_mailer/leave_msg.html.erb
+++ b/app/views/user_mailer/leave_msg.html.erb
@@ -2,7 +2,7 @@
 <br />
 <br />
 
-<%= t'mobile.email.name' @params[:customer_name] %>
+<%=t('mobile.email.name') @params[:customer_name] %>
 <br />
 Email: <%= @params[:customer_email] %>
 <br />
@@ -13,7 +13,7 @@ Subject: <%= @params[:customer_subject] %>
 Message: <%= @params[:customer_feedback] %>
 <br />
 <br />
-<%==t'mobile.email.thank_you'%>
+<%==t('mobile.email.thank_you')%>
 <br />
-<%==t'mobile.email.signature'%>
+<%==t('mobile.email.signature')%>
 <br />
