--- a/app/views/user_mailer/tell_friend.html.erb
+++ b/app/views/user_mailer/tell_friend.html.erb
@@ -3,9 +3,9 @@
 <br />
 <br />
 
-<%==t'mobile.email.thank_you'%>
+<%==t('mobile.email.thank_you')%>
 <br />
-<%==t'mobile.email.signature'%>
+<%==t('mobile.email.signature')%>
 <br />
 <br />
-<%==t'mobile.email.create_site'%>
+<%==t('mobile.email.create_site')%>
