Email body i18n. Addresses #208

--- a/app/views/user_mailer/booking_email.html.erb
+++ b/app/views/user_mailer/booking_email.html.erb
@@ -14,6 +14,6 @@ Date: <%= @params[:date] %>
 <br />
 <br />
 
-<%==t('mobile.email.thank_you')%>
+<%==t('mobile.email.closing')%>
 <br />
 <%==t('mobile.email.signature')%>
