--- a/app/views/user_mailer/tell_friend.html.erb
+++ b/app/views/user_mailer/tell_friend.html.erb
@@ -3,7 +3,7 @@
 <br />
 <br />
 
-<%==t('mobile.email.thank_you')%>
+<%==t('mobile.email.closing')%>
 <br />
 <%==t('mobile.email.signature')%>
 <br />
