--- a/app/views/user_mailer/call_back.html.erb
+++ b/app/views/user_mailer/call_back.html.erb
@@ -11,6 +11,6 @@ Message: <%= @params[:customer_message] %>
 <br />
 <br />
 
-<%==t('mobile.email.thank_you')%>
+<%==t('mobile.email.closing')%>
 <br />
 <%==t('mobile.email.signature')%>
