i18n: Updated mobile form emails

--- a/app/views/user_mailer/booking_email.html.erb
+++ b/app/views/user_mailer/booking_email.html.erb
@@ -2,15 +2,15 @@
 <br />
 <br />
 
-Name: <%= @params[:name] %>
+<%=t('mobile.email.name') %> <%= @params[:name] %>
 <br />
-Phone: <%= @params[:phone] %>
+<%=t('mobile.email.phone') %> <%= @params[:phone] %>
 <br />
-Number of People: <%= @params[:party_size] %>
+<%=t('mobile.email.num_people') %>  <%= @params[:party_size] %>
 <br />
-Time: <%= @params[:time] %>
+<%=t('mobile.email.time') %>  <%= @params[:time] %>
 <br />
-Date: <%= @params[:date] %>
+<%=t('mobile.email.date') %>  <%= @params[:date] %>
 <br />
 <br />
 
