--- a/app/views/user_mailer/call_back.html.erb
+++ b/app/views/user_mailer/call_back.html.erb
@@ -2,12 +2,12 @@
 <br />
 <br />
 
-Name: <%=@params[:customer_name] %>
+<%=t('mobile.email.name') %>  <%=@params[:customer_name] %>
 <br />
-Phone: <%=@params[:customer_phone] %>
+<%=t('mobile.email.phone') %>  <%=@params[:customer_phone] %>
 <br />
 <br />
-Message: <%= @params[:customer_message] %>
+<%=t('mobile.email.message') %>  <%= @params[:customer_message] %>
 <br />
 <br />
 
