Fixed year bug in booking request view.
The years were hard coded 2011..2012. It should start from this year
and move forward.

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -184,7 +184,7 @@
         | &nbsp;&frasl;&nbsp;
         = select_tag 'date_d', options_for_select(1..31,Date.today.day)
         | &nbsp;&frasl;&nbsp;
-        = select_tag 'date_y', options_for_select(2011..2012,Date.today.year)
+        = select_tag 'date_y', options_for_select(Date.today.year..Date.today.year+5,Date.today.year)
         br
         .aritcaptcha-container
         p.error.response
