--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -29,20 +29,19 @@
   h2.active-site =t('site_manager.active_site', :site_name => current_user.company.db_name)
 
   .site-list-wrap
+    button.create =t'site_manager.create_new_site'
     h2 =t'site_manager.site_access_list'
     ul.sites.fancy-selectable
-    button.edit =t'site_manager.edit_site'
-    button.create =t'site_manager.create_new_site'
-    button.make-default =t'site_manager.make_default'
-  .site-details-wrap
-    h2 =t'site_manager.site_details'
-    .details
-      h3.active-site =t'site_manager.select_site'
-      button disabled="disabled" =t'site_manager.generate_signup_key'
-      ul.admins.fancy-selectable
-    button.add-admin    disabled="disabled" =t'site_manager.add_admin'
-    button.remove-admin disabled="disabled" =t'site_manager.revoke_access'
-    button.concede      disabled="disabled" =t'site_manager.make_owner'
+
+  .accordian
+    .site-details
+      button.edit =t'site_manager.edit_site'
+      button.make-default =t'site_manager.make_default'
+    .signup-keys
+    .site-grade
+    .merchant-account
+    .site-admins
+
   .clearfix
 
 
@@ -66,7 +65,6 @@
               |  [Default]
               | <% } %>
 
-
   script.site-details(type="text/template")
     h3.active-site
       =t('site_manager.selected_site', :site_name => "{{ url }}")
@@ -74,32 +72,71 @@
       | *
       | <% } %>
 
-    button.gen-signup-key =t'site_manager.generate_signup_key'
-    input.signup-key.hide type="text" readonly="readonly"
-    a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp"
-      img.help-bubble src="/images/ui/help-bubble.png" title=t('site_manager.help.signup_keys')
+  script.signup-keys(type="text/template")
+    .content-header
+      .action Generate
+      h3.title Signup Keys
+      .status Generate Signup Key
+      .clearfix
+    .content-body
+      button.gen-signup-key =t'site_manager.generate_signup_key'
+      a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp"
+        img.help-bubble src="/images/ui/help-bubble.png" title=t('site_manager.help.signup_keys')
+      br
+      input.signup-key-input.hide type="text" readonly="readonly"
 
-    ul.admins.fancy-selectable
-      li.admin.owner data-id="{{ owner.id }}"
+  script.site-grade(type="text/template")
+    .content-header
+      .action {{ actionLabel }}
+      h3.title Site Grade
+      .status {{ grade }}
+      .clearfix
+    .content-body
+      p Upgrade today!
+
+  script.merchant-account(type="text/template")
+    .content-header
+      .action Setup
+      h3.title Merchant Account
+      .status You have not set up your merchant account.
+      .clearfix
+    .content-body
+      b Coming soon.
+
+  script.site-admins(type="text/template")
+    .content-header
+      .action Manage
+      h3.title Site Admins
+      .status This site has <b><% print(admins.length+1); %></b> admin(s).
+      .clearfix
+    .content-body
+      ul.admins.fancy-selectable
+      button.add-admin    disabled="disabled" =t'site_manager.add_admin'
+      button.remove-admin disabled="disabled" =t'site_manager.revoke_access'
+      button.concede      disabled="disabled" =t'site_manager.make_owner'
+      .clearfix
+
+  script.admin-list(type="text/template")
+    li.admin.owner data-id="{{ owner.id }}"
+      table
+        tbody
+          tr
+            td.site-pic
+              img src="{{ owner.logo }}"
+            td
+              span.name
+                ' {{ owner.firstName }} {{ owner.lastName }}
+                span.is-owner (Owner)
+      | <% for (var i=0; i < admins.length; i++) { %>
+      li.admin data-id="{{ admins[i].id }}"
         table
           tbody
             tr
               td.site-pic
-                img src="{{ owner.logo }}"
+                img src="{{ admins[i].logo }}"
               td
-                span.name
-                  ' {{ owner.firstName }} {{ owner.lastName }}
-                  span.is-owner (Owner)
-        | <% for (var i=0; i < admins.length; i++) { %>
-        li.admin data-id="{{ admins[i].id }}"
-          table
-            tbody
-              tr
-                td.site-pic
-                  img src="{{ admins[i].logo }}"
-                td
-                  span.name {{ admins[i].firstName }} {{ admins[i].lastName }}
-        | <% } %>
+                span.name {{ admins[i].firstName }} {{ admins[i].lastName }}
+      | <% } %>
 
   script.admin(type="text/template")
     span.url yomobi.com/{{ name }}
