--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -232,6 +232,8 @@
     .clearfix
 
   script.gmap-page(type="text/template")
+    p =t'mobile.form.address' 
+
     .addr-line {{ _maybe.addr1 }}
     .addr-line {{ _maybe.addr2 }}
     .addr-line {{ _maybe.city }}<% if (_maybe.city && _maybe.state) { print(','); } %> {{ _maybe.state }} {{ _maybe.zip }}
@@ -240,15 +242,15 @@
     .maps style="margin-top: 8px"
       a.map-link href="http://maps.google.com/maps?q={{ fullAddress }}"
         img src="{{ mapUrl2 }}"
-    a.map-link href="http://maps.google.com/maps?q={{ fullAddress }}" View Google Map
+    a.map-link href="http://maps.google.com/maps?q={{ fullAddress }}" =t'mobile.form.view_in_map'
 
     .directions
-      .banner Get Directions:
+      .banner =t'mobile.form.get_directions'
       form action="http://maps.google.com/maps" method="get"
-        label Starting Address:
+        label =t'mobile.form.starting_address'
         br
         input type="text" name="saddr"
-        input type="submit" value="Map It"
+        input type="submit" value=t'mobile.form.map_it'
         input type="hidden" name="daddr" value="{{ fullAddress }}"
 
   script.coupon-page(type="text/template")
